[composebox] Fix focus indicator alignment in deep search mode.
Since deep search mode suggestions now use padding to make up for
extra row space, the focus indicator was getting offset and going on
to the next row.

Before: https://screenshot.googleplex.com/5w76ygp5rzMXBNm
After: https://screenshot.googleplex.com/A5e7XXwj3eb2hXo

Bug: 469447692
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7378894
Auto-Submit: Nihar Majmudar <niharm@google.com>
Commit-Queue: Duncan Mercer <mercerd@google.com>
Cr-Commit-Position: refs/heads/main@{#1563886}

--- a/ui/webui/resources/cr_components/composebox/composebox_match.css
+++ b/ui/webui/resources/cr_components/composebox/composebox_match.css
@@ -105,6 +105,12 @@
   line-height: 24px;
 }
 
+:host-context([in-deep-search-mode_]) #focusIndicator {
+  top: 0;
+  bottom: 0;
+  height: auto;
+}
+
 :host-context([in-deep-search-mode_]) {
   height: auto;
   min-height: var(--cr-composebox-match-height, 44px);
